[package]
name = "datars"
version = "0.1.0"
authors = ["Daemitrious <evandotschwartzentruber@gmail.com>"]
edition = "2018"

[features]
test = ["rand"]
default = []

[dependencies]
rand = { version = "0.8.4", features = [], optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = [] }
websocket = { version = "0.26.2", features = ["sync"], default-features = false }