[package]
name = "datars"
version = "0.1.0"
authors = ["Daemitrious <evandotschwartzentruber@gmail.com>"]
edition = "2018"

[features]
test = ["rand"]
default = []

[dependencies]
rand = { version = "0.8.4", default-features = false, features = [], optional = true }

serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.66", default-features = false, features = ["std"] }

tungstenite = { version = "0.14.0", default-features = false, features = [] }